# networkMonitor

./: Dockerfile
.github/workflows/: deploy.yml
app/: main.py  network_sampler.py  pyproject.toml  telemetry_sampler.py
app/static/: index.html
