[project]
name = "networkMonitor"
version = "0.0.2"
description = "Tool to log and visualize traffic rates accross wifi and ethernet."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "litestar[standard]",
    "psutil"
]

